[package]
name = "nrbf-parser"
version = "0.1.2"
edition = "2024"
authors = ["driedpampas@proton.me"]
description = "A high-performance MS-NRBF binary parser and encoder for Rust"
repository = "https://github.com/driedpampas/nrbf-parser"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["nrbf", "dotnet", "unity", "parser", "encoder"]
categories = ["encoding", "parser-implementations"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
hex = "0.4"
